# memex

./: .gitignore  Cargo.toml  license  readme.md  rustfmt.toml
migrations/: drop_tables.sql  schema.sql
src/: db.rs  error.rs  files.rs  main.rs  model.rs  parser.rs
src/routing/: pages.rs
src/templates/: mod.rs
static/: style.css
templates/: 404.html  base.html
