[package]
name = "memex"
version = "0.1.0"
edition = "2024"

[dependencies]
gray_matter = "0.3.2"
pulldown-cmark = "0.13.0"
serde = "1.0.228"
askama = "0.15.1"
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
serde_json = "1.0.148"
paste = "1.0.15"
